fix: change logo z-index

--- a/custom.css
+++ b/custom.css
@@ -868,13 +868,12 @@ textarea:focus-visible {
 
 div#journals::before {
   content: '📅';
-  opacity: 0.8;
   display: block;
   position: sticky;
   float: right;
   top: 2.4em;
   font-size: 1.5em;
-  z-index: 10;
+  z-index: 9;
   text-shadow: 0 0 1px;
 }
 
